# audresamplelib

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  sr-converter.c  sr-converter.h  src.h  src_oneshot.c  src_streaming.c
include/: audresample.h  audsrc.h  remix.h
progsrc/: src_oneshot.c  src_streaming.c
src/: audresample.c  audresample.def  audsrc.c  remix.c
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp  resample.cpp
tests/: CMakeLists.txt  resample.cpp
tests/test-assets/: generate_test_assets.py
